# zombiedude

./: .gitignore  Cargo.toml  MyLib.S  build.sh  compile_commands.json  data.psp  debug.pspsh  exports.exp  hello.h  install.sh  ppsspp.sh  reset-debugger.sh  run.sh
.codelite/: zombiedude-someone.tags  zombiedude.session  zombiedude.workspace.someone
.ctagsd/: ctagsd.json  file_list.txt
elf_template/: Makefile  main.c  test.h
embedded-graphics/: Cargo.toml  build.sh
embedded-graphics/src/: main.rs
game/src/: lib.rs
game_psp/: Cargo.toml  ms0  sceGUexample.c
game_psp/ms0/: .ppsspp
game_psp/src/: c_compat.rs  file.rs  grafix.rs  io.rs  main.rs
hello_psp/: Cargo.toml  run.sh
hello_psp/src/: main.rs
main/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  debug.pspsh  debugger.txt  reset-debugger.sh
main/include/: debug.h  types.h
main/src/: home_button.cpp  home_button.h  main.cpp  main.h  thread.cpp  thread.h
nid_generator/: Cargo.toml
nid_generator/src/: lib.rs  main.rs
os_psp/: Cargo.toml
os_psp/src/: c_runtime.rs  lib.rs  macros.rs  psp_module.rs
png_psp/: Cargo.toml
png_psp/src/: c_runtime.rs  lib.rs  main.rs  psp_module.rs  stb_image.rs  stb_image_common.rs  stb_image_png.rs  stb_image_zlib.rs
rust-and-c/: Cargo.toml
rust-and-c/src/: lib.rs  test.c  test.h.gch
test_create/: Cargo.toml
test_create/src/: lib.rs  main.rs
test_load/: Cargo.toml
test_load/src/: macros.rs  main.rs
