[package]
name = "game_psp"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "unwind"
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png_psp = { version = "0.1.0", path = "../png_psp" }
psp = { version = "0.3.3" } 
# substance-framework = "0.3.0-alpha"
# genawaiter = { version = "0.99.1" }
