[package]
name = "test_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psp = { version = "0.3.3" } 
test_create = { version = "0.1.0", path = "../test_create" }
os_psp = { version = "0.1.0", path = "../os_psp/" }